--- a/LND/unidad-02/tareas/tarea14-infinity/style/index.css
+++ b/LND/unidad-02/tareas/tarea14-infinity/style/index.css
@@ -1,19 +1,34 @@
-body {
-    background-color: #0a0a27;
+header {
+    height: 950px;
+    background-image: url(../img/background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
-    color: white;
-    position: relative;
+header div {
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+header .title {
     text-align: center;
 }
 
-#title {
+.button {
+    list-style-type: none;
+    text-indent: -30px;
     padding: 20px;
+}
+
+.button a {
+    text-decoration: none;
+    padding: 10px 30px 10px 30px;
+    background-color: #d5b58c;
     border-radius: 10px 10px 10px 10px;
-    background-color: #111244;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    color: black;
 }
