--- a/LND/unidad-02/tareas/tarea14-infinity/style/index.css
+++ b/LND/unidad-02/tareas/tarea14-infinity/style/index.css
@@ -15,8 +15,8 @@ header div {
     transform: translate(-50%, -50%);
 }
 
-header .title {
-    text-align: center;
+.title {
+    letter-spacing: 2px;
 }
 
 .button {
