--- a/LND/unidad-02/tareas/tarea14-infinity/style/index.css
+++ b/LND/unidad-02/tareas/tarea14-infinity/style/index.css
@@ -1,34 +1,64 @@
-header {
-    height: 950px;
-    background-image: url(../img/background.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    font-family: Arial, Helvetica, sans-serif;
+@font-face {
+    font-family: "Undertale Font";
+    src: url(DeterminationSansWebRegular-369X.ttf);
 }
 
-header div {
-    text-align: center;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+body {
+    margin: 0px;
+    font-family: "Undertale Font", sans-serif;
+    color: white;
 }
 
-.title {
-    letter-spacing: 2px;
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    background-color: #030a0e;
 }
 
-.button {
+.navbar ul {
     list-style-type: none;
-    text-indent: -30px;
-    padding: 20px;
+    text-align: center;
 }
 
-.button a {
+.navbar ul li {
+    display: inline-block;
+}
+
+.navbar a {
+    font-family: sans-serif;
     text-decoration: none;
-    padding: 10px 30px 10px 30px;
-    background-color: #d5b58c;
-    border-radius: 10px 10px 10px 10px;
-    color: black;
+    color: white;
+    padding-right: 20px;
+}
+
+.navbar ul a:hover {
+    color: rgb(192, 176, 156);
+    text-decoration-line: underline;
+}
+
+.navbar h1 a {
+    font-family: "Undertale Font";
+    padding-right: 50px;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+main {
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    bottom: 0;
+    background-image: url(../img/main-bg.gif);
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    height: 50px;
+    width: 100%;
+    background-color: #030a0e;
 }
