--- a/LND/unidad-02/tareas/tarea14-infinity/style/main.css
+++ b/LND/unidad-02/tareas/tarea14-infinity/style/main.css
@@ -9,6 +9,7 @@ body {
 }
 
 main {
+    font-family: sans-serif;
     position: absolute;
     width: 80%;
     left: 50%;
@@ -33,4 +34,11 @@ main {
     left: 50%;
     transform: translate(-50%, 0);
     text-align: justify;
+}
+
+section {
+    padding: 10px 20px 10px 20px;
+    margin: 10px 20px 10px 20px;
+    background-color: #0a2230;
+    border-radius: 20px;
 }
