--- a/LND/unidad-02/tareas/tarea14-infinity/style/main.css
+++ b/LND/unidad-02/tareas/tarea14-infinity/style/main.css
@@ -35,3 +35,50 @@ main {
     transform: translate(-50%, 0);
     text-align: justify;
 }
+
+.projects-gallery {
+    align-items: start;
+    display: grid;
+    grid-template-columns: repeat(3, 250px);
+    justify-content: center;
+    grid-gap: 20px;
+    margin-top: 50px;
+    width: 100%;
+}
+
+.projects-gallery .item {
+    display: block;
+    position: relative;
+    width: 250px;
+    height: 250px;
+    text-align: center;
+    background-color: #1d3e4c;
+}
+
+.projects-gallery .item:hover h4 {
+    display: block;
+}
+
+.projects-gallery .item:hover img {
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.projects-gallery .item a {
+    color: white;
+    text-decoration: none;
+}
+
+.projects-gallery .item h4 {
+    display: none;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    width: 200px;
+    transform: translate(-50%, -50%);
+}
+
+.projects-gallery .item img {
+    width: 100%;
+    height: 100%;
+}
