Se adelanta pagina

--- a/LND/unidad-02/tareas/tarea14-infinity/style/main.css
+++ b/LND/unidad-02/tareas/tarea14-infinity/style/main.css
@@ -36,6 +36,8 @@ main {
     text-align: justify;
 }
 
+/* Galería de proyectos */
+
 .projects-gallery {
     align-items: start;
     display: grid;
@@ -52,33 +54,41 @@ main {
     width: 250px;
     height: 250px;
     text-align: center;
-    background-color: #1d3e4c;
-}
-
-.projects-gallery .item:hover h4 {
-    display: block;
-}
-
-.projects-gallery .item:hover img {
-    opacity: 0;
-    transition: opacity 0.3s;
+    border-radius: 20px;
+    background-color: #ffffff;
+    transition: 0.3s;
 }
 
 .projects-gallery .item a {
-    color: white;
     text-decoration: none;
 }
 
 .projects-gallery .item h4 {
     display: none;
     position: absolute;
-    top: 60%;
+    top: 50%;
     left: 50%;
     width: 200px;
     transform: translate(-50%, -50%);
 }
 
 .projects-gallery .item img {
+    transition: 0.3s;
     width: 100%;
     height: 100%;
+    border-radius: 20px;
 }
+
+.projects-gallery .item:hover {
+    transform: scale(1.05);
+}
+
+.projects-gallery .item:hover h4 {
+    display: block;
+    color: black;
+}
+
+.projects-gallery .item:hover img {
+    opacity: 0;
+}
+
