--- a/LND/unidad-02/tareas/tarea14-infinity/style/main.css
+++ b/LND/unidad-02/tareas/tarea14-infinity/style/main.css
@@ -9,6 +9,7 @@ body {
     background-attachment: fixed;
 }
 
+
 main {
     font-family: sans-serif;
     position: absolute;
@@ -17,6 +18,18 @@ main {
     left: 50%;
     transform: translate(-50%, 0);
     color: white;
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .color-bg {
@@ -44,6 +57,39 @@ main {
     text-align: justify;
 }
 
+form {
+    margin-bottom: 100px;
+}
+
+q {
+    font-style: italic;
+}
+
+/* Main Project */
+
+.main-project-gallery {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: repeat(3, 250px);
+    column-gap: 50px;
+}
+
+.main-project-gallery .item {
+    margin-top: 20px;
+    width: 250px;
+    height: 400px;
+    border: 1px solid white;
+    transition: 0.3s;
+    text-align: center;
+}
+
+.main-project-gallery .item:hover {
+    transform: scale(1.05);
+    background-color: white;
+    color: black;
+}
+
 /* Galería de proyectos */
 
 .projects-gallery {
@@ -63,7 +109,8 @@ main {
     height: 250px;
     text-align: center;
     border-radius: 20px;
-    background-color: #ffffff;
+    border: 1px solid white;
+    background-color: #030a0e;
     transition: 0.3s;
 }
 
@@ -89,6 +136,8 @@ main {
 
 .projects-gallery .item:hover {
     transform: scale(1.05);
+    background-color: #ffffff;
+    color: black;
 }
 
 .projects-gallery .item:hover h4 {
